# 2025_Summer_project_MALTA

./: BulkReconstruct.py  README.md
maltasim/: CMakeLists.txt  README.md  compile.sh
maltasim/TCAD/: sde_std_dvs.cmd  sdevice_des.cmd
maltasim/config/: malta2_simple.conf  malta_simple.conf  mesh_test.conf  telescope.conf  telescope_sim.conf
maltasim/share/: autonInclination.py  split_planes.py
maltasim/src/: CMakeLists.txt
maltasim/src/libMaltaAllPix2/: CMakeLists.txt
maltasim/src/libMaltaAllPix2/Malta2TreeWriter/: CMakeLists.txt  Malta2TreeWriterModule.cpp  Malta2TreeWriterModule.hpp
maltasim/src/libMaltaSim/: CMakeLists.txt
maltasim/src/libMaltaSim/Malta2FastSim/: CMakeLists.txt  Malta2FastSimModule.cpp  Malta2FastSimModule.hpp  README.md
